--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -6,7 +6,21 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@ARTICLE{2017arXiv170500834G,
+       author = {{Genevois}, Anthony},
+        title = "{Lamplighter groups, median spaces, and a-T-menability}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Group Theory, Mathematics - Metric Geometry, 20F65, 20F67, 43A15},
+         year = 2017,
+        month = may,
+          eid = {arXiv:1705.00834},
+        pages = {arXiv:1705.00834},
+archivePrefix = {arXiv},
+       eprint = {1705.00834},
+ primaryClass = {math.GR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv170500834G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{MR1705337,
 	author = {Klav{\v{z}}ar, Sandi and Mulder, Henry Martyn},
